# semgrep-ghes-util

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
src/semgrep_ghes_util/: cli.py
src/semgrep_ghes_util/clients/: github_client.py  semgrep_client.py
